--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page__content">
     <header class="header">
       <a class="header__logo" href="#">
         <img src="./images/logo.png" alt="Moyo logo">
@@ -51,7 +51,7 @@
       </nav>
     </header>
 
-    <main class="catalog">
+    <main class="page__catalog catalog">
       <div class="catalog__card">
         Product card
       </div>
